// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemovableButton/> custom props 1`] = `
<div
  className="permissions-button-group btn-group"
>
  <div
    className="disabled-button-with-tooltip"
    onBlur={[Function]}
    onClick={null}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <button
      className="btn btn-primary"
      disabled={true}
      type="button"
    >
      <i
        className="fa fa-remove"
      />
    </button>
  </div>
  <button
    className="permissions-button-display permissions-button-added btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Display Text (Custom)
  </button>
</div>
`;

exports[`<RemovableButton/> default props 1`] = `
<div
  className="permissions-button-group btn-group"
>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa fa-remove"
    />
  </button>
  <button
    className="permissions-button-display btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Display Text
  </button>
</div>
`;

exports[`<RemovableButton/> not removable 1`] = `
<button
  className="permissions-button-display btn btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Display Text (Not Removable)
</button>
`;
